[package]
name = "tiktok-clone"
version = "0.1.0"
description = "A TikTok clone built on Solana blockchain"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yourusername/tiktok-clone"

[lib]
crate-type = ["cdylib", "lib"]
name = "tiktok_clone"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
